WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172796
Compilation errors from LocalizedStrings.cpp
https://bugs.webkit.org/show_bug.cgi?id=172796
Summary
Compilation errors from LocalizedStrings.cpp
Yoshiaki Jitsukawa
Reported
2017-05-31 20:51:45 PDT
https://trac.webkit.org/changeset/214244/webkit
seems to have introduced compilation errors on such platforms other than USE(CF) || USE(GLIB). There're some code like String::fromUTF8("Look Up “<selection>”", "Look Up context menu item with selected word") but String::fromUTF8() cannot take two strings (for string and description).
Attachments
Patch
(3.86 KB, patch)
2017-05-31 21:05 PDT
,
Yoshiaki Jitsukawa
achristensen
: review-
Details
Formatted Diff
Diff
Patch
(3.83 KB, patch)
2017-05-31 22:57 PDT
,
Yoshiaki Jitsukawa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yoshiaki Jitsukawa
Comment 1
2017-05-31 21:05:31 PDT
Created
attachment 311680
[details]
Patch
Yoshiaki Jitsukawa
Comment 2
2017-05-31 22:57:17 PDT
Created
attachment 311684
[details]
Patch
Michael Catanzaro
Comment 3
2017-06-01 08:05:15 PDT
Would it be better/clearer to just remove the second argument instead, since WEB_UI_STRING degrades to String::fromUTF8 in this case anyway?
Don Olmstead
Comment 4
2017-06-01 10:45:11 PDT
(In reply to Michael Catanzaro from
comment #3
)
> Would it be better/clearer to just remove the second argument instead, since > WEB_UI_STRING degrades to String::fromUTF8 in this case anyway?
The original patch just commented it out. I thought it would be more consistent with the rest of the file's contents to use WEB_UI_STRING.
WebKit Commit Bot
Comment 5
2017-06-01 15:32:27 PDT
Comment on
attachment 311684
[details]
Patch Clearing flags on attachment: 311684 Committed
r217686
: <
http://trac.webkit.org/changeset/217686
>
WebKit Commit Bot
Comment 6
2017-06-01 15:32:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug