Fix compilation errors in LocalizedStrings.cpp on platform not USE(CF) nor USE(GLIB) https://bugs.webkit.org/show_bug.cgi?id=172796

Patch by Yoshiaki Jitsukawa <Yoshiaki.Jitsukawa@sony.com> on 2017-06-01
Reviewed by Alex Christensen.

No new tests needed. Fixing compilation errors.

* platform/LocalizedStrings.cpp:
(WebCore::contextMenuItemTagLookUpInDictionary):
(WebCore::imageTitle):
(WebCore::validationMessageRangeUnderflowText):
(WebCore::validationMessageRangeOverflowText):

Canonical link: https://commits.webkit.org/189722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217686 268f45cc-cd09-0410-ab3c-d52691b4dbfc